<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="800dp"
    style="@style/MainConstraintLayout"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/vector"
        style="@style/ImageViewStyle"
        android:layout_marginStart="52dp"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/picture"
        android:src="@drawable/vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        style="@style/WelcomeText"
        android:layout_marginStart="80dp"
        android:layout_marginTop="180dp"
        android:text="@string/welcome_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/access"
        android:layout_width="207dp"
        android:layout_height="17dp"
        style="@style/SubtitleText"
        android:layout_marginStart="78dp"
        android:layout_marginTop="213dp"
        android:text="@string/sign_in_to_access_your_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_button"
        style="@style/InputFieldStyle"
        android:layout_marginStart="30dp"
        android:layout_marginTop="325dp"
        android:hint="@string/enter_your_email"
        app:endIconDrawable="@drawable/mail"
        app:endIconMode="custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_button"
        style="@style/InputFieldStyle"
        android:layout_marginStart="31dp"
        android:layout_marginTop="400dp"
        android:hint="@string/password"
        app:endIconDrawable="@drawable/lock"
        app:endIconMode="custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tForgotPassword"
        style="@style/OtherPurpleText"
        android:layout_width="75dp"
        android:layout_height="10dp"
        android:layout_marginTop="467dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/remember_me"
        style="@style/CheckboxStyle"
        android:layout_marginStart="31dp"
        android:layout_marginTop="466dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/RememberMe"
        android:layout_width="60dp"
        android:layout_height="10dp"
        style="@style/OtherBlackText"
        android:layout_marginStart="48dp"
        android:layout_marginTop="464dp"
        android:text="@string/remember_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_button"
        style="@style/NextButtonStyle"
        android:layout_marginTop="600dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/new_member"
        style="@style/NewMemberText"
        android:layout_marginStart="108dp"
        android:layout_marginTop="660dp"
        android:text="@string/new_member"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Register_now"
        style="@style/RegisterNowText"
        android:text="@string/register_now"
        app:layout_constraintStart_toEndOf="@id/new_member"
        app:layout_constraintTop_toTopOf="@id/new_member" />

</androidx.constraintlayout.widget.ConstraintLayout>

